Archive2/74/a9c91ae094a007/main.cpp
#include <stdio.h>

int main(){

   int list1[9] {5, 10, 15, 20, 25, 30, 35, 40, 45};

   int i = 0;

   list1 [i];

   for (i; i < 9; i++) {
        printf("%d \n", list1[i]);
   }
}